wip in attendance summary

--- a/app/src/main/res/layout/activity_leave_info.xml
+++ b/app/src/main/res/layout/activity_leave_info.xml
@@ -8,276 +8,21 @@
     tools:context=".acitvities.LeaveInfoActivity">
     <include
         android:id="@+id/app_bar"
-        layout="@layout/app_toolbar"/>
-
-    <include layout="@layout/search_formate"/>
-
-    <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-    <LinearLayout
-        android:id="@+id/info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight=".6"
-        android:orientation="horizontal"
-        android:visibility="invisible"
-        android:paddingLeft="24dp">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/name_title_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Employee Name :"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/user_nameId"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/id_title_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Employee Id :"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/user_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/branch_title_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/branch"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/branch_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/dept_title_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/department"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/department_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/desig_title_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/designation"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/designation_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/contact_title_txt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/contact_no"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/contact_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:textSize="15dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/image_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".4"
-            android:gravity="right">
-
-            <ImageView
-                android:id="@+id/user_imageId"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_gravity="right"
-                android:src="@drawable/moon" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-        <!--<TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stretchColumns="5">
-
-            <TableRow
-                android:layout_width="match_parent">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="@string/table_layout_4_dates" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:textStyle="bold"
-                    android:text="@string/table_layout_4_open_in" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="@string/table_layout_4_out" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="@string/table_layout_4_status" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:text="@string/table_layout_4_save_remark" />
-            </TableRow>
-            <TableRow android:layout_width="match_parent">
-
-                <TextView
-                    android:id="@+id/dates"
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:text="1st June,2018" />
-
-                <TextView
-                    android:id="@+id/in_timing"
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:text="8:53" />
-
-                <TextView
-                    android:id="@+id/out_timing"
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:text="19:01"/>
-
-                <TextView
-                    android:id="@+id/attendance_status"
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:padding="3dip"
-                    android:gravity="center"
-                    android:text="Present" />
-
-                <TextView
-                    android:id="@+id/attendance_remark"
-                    android:layout_width="0dp"
-                    android:layout_weight=".2"
-                    android:gravity="center"
-                    android:padding="3dip"
-                    android:text="" />
-            </TableRow>
-        </TableLayout>-->
-    <!--</ScrollView>-->
+        layout="@layout/mapapp_toolbar"/>
+    <com.github.sundeepk.compactcalendarview.CompactCalendarView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/leaveInfoCalendarView"
+        android:layout_width="fill_parent"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_height="250dp"
+        app:compactCalendarTargetHeight="250dp"
+        app:compactCalendarTextSize="12sp"
+        app:compactCalendarBackgroundColor="#ffffff"
+        app:compactCalendarTextColor="#000"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorAccent"
+        app:compactCalendarCurrentDayBackgroundColor="@color/currentDateColor"
+        app:compactCalendarMultiEventIndicatorColor="#fff"
+        />
 
 </LinearLayout>
