--- a/app/src/main/res/layout/activity_apply_leave.xml
+++ b/app/src/main/res/layout/activity_apply_leave.xml
@@ -19,7 +19,8 @@
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:weekNumberColor="#f00" />
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
