--- a/app/src/main/res/layout/applied_leave_listview.xml
+++ b/app/src/main/res/layout/applied_leave_listview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="vertical"
@@ -13,34 +14,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txttype"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="CL"
-                android:textSize="20dp" />
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/txtpin_no"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:gravity="center"/>
             <TextView
                 android:id="@+id/txtleave_status"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:gravity="center"/>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/txtreason"
@@ -72,7 +74,7 @@
                     <TextView
                     android:id="@+id/txttodate"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="16 th july 2018"
                     android:textSize="12sp" />
@@ -86,13 +88,13 @@
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
-
             <TextView
                 android:id="@+id/days"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="5dp"
                 android:gravity="center"
                 android:text="1 day"
                 android:textSize="14sp" />
