--- a/app/src/main/res/layout/apply_leave_view.xml
+++ b/app/src/main/res/layout/apply_leave_view.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/to"
-            android:inputType="date" />
+            android:inputType="date"
+            android:focusable="false"/>
     </android.support.design.widget.TextInputLayout>
     <LinearLayout
         android:layout_width="match_parent"
