--- a/app/src/main/res/layout/activity_attendance_summary.xml
+++ b/app/src/main/res/layout/activity_attendance_summary.xml
@@ -11,11 +11,45 @@
     <CalendarView
         android:id="@+id/attCalendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
     </CalendarView>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:padding="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/calendarbackbtn"
+            android:layout_width="0dp"
+            android:layout_weight=".1"
+            android:layout_height="match_parent"
+            android:src="@drawable/icon_arrow_backblack"/>
+        <TextView
+            android:id="@+id/txt_calendarMonth"
+            android:layout_width="0dp"
+            android:layout_weight=".8"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/primaryTextColor"
+            android:textStyle="bold"
+            android:text="July 2018"/>
+        <ImageView
+            android:id="@+id/calendarforwardbtn"
+            android:layout_width="0dp"
+            android:layout_weight=".1"
+            android:layout_height="match_parent"
+            android:src="@drawable/icon_forward_arrow"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/attCalendarviewRecyclerview"
+        android:background="@color/primaryTextColor"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
