--- a/app/src/main/res/layout/attendance_summary_listview.xml
+++ b/app/src/main/res/layout/attendance_summary_listview.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:orientation="vertical"
-    android:layout_marginBottom="0.5dp">
+    android:layout_marginBottom="0.5dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/leaveAppliedCardView"
+        android:id="@+id/attSummaryCardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,7 +21,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="1 Jul"
-                android:textSize="18sp"/>
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -31,6 +31,11 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="10dp">
+                <TextView
+                    android:id="@+id/txtInTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/txtLeaveReason"
@@ -38,50 +43,53 @@
                     android:layout_height="wrap_content"
                     android:text="sick leave"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/txtOutTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center" />
+
                 <TextView
                     android:id="@+id/txtApprovedStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     android:text="Approved"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
+
                 <TextView
-                    android:id="@+id/txtInTime"
+                    android:id="@+id/txtLeaveAppliedDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:text="09:00:05"
-                    android:gravity="center"/>
-                <TextView
-                    android:id="@+id/txtOutTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:text="19:10:05"
-                    android:gravity="center"/>
-                <TextView
-                    android:id="@+id/txtSunday"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:text="19:10:05"
-                    android:gravity="center"/>
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
+
             </LinearLayout>
+            <TextView
+            android:id="@+id/txtDayStatus"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+            android:text="P" />
+
             <TextView
                 android:id="@+id/days"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="CL"
-                android:textSize="18sp"/>
+                android:textSize="14sp"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/txtpin_no"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:gravity="center"/>
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
