complete apply leave with details popup

--- a/app/src/main/res/layout/applied_leave_listview.xml
+++ b/app/src/main/res/layout/applied_leave_listview.xml
@@ -50,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:text="sick leave"
                     android:textSize="14sp"
+                    android:maxLines="2"
                     android:textStyle="bold" />
 
                 <LinearLayout
