--- a/app/src/main/res/layout/activity_apply_leave.xml
+++ b/app/src/main/res/layout/activity_apply_leave.xml
@@ -29,4 +29,12 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/txt_nofounddata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:gravity="center"
+        android:text="Data not found"/>
+
 </LinearLayout>
