--- a/app/src/main/res/layout/activity_customer_visit_form.xml
+++ b/app/src/main/res/layout/activity_customer_visit_form.xml
@@ -130,6 +130,7 @@
                             android:layout_weight=".7"
                             android:ems="10"
                             android:inputType="date"
+                            android:focusable="false"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
                     </LinearLayout>
