--- a/app/src/main/res/layout/attendance_summary_popup.xml
+++ b/app/src/main/res/layout/attendance_summary_popup.xml
@@ -12,14 +12,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txt_leaveType"
+            android:id="@+id/txtclickedDate"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:paddingTop="20dp"
-            android:text="CL"
             android:textAlignment="center"
+            android:background="@color/btn_enabledColor"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
@@ -33,14 +33,52 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <TextView
-            android:id="@+id/txt_leaveReason"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="Family Trip" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/leaveType"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Leave Type"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/txtleaveType"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/leaveReason"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Reason"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/txtleaveReason"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="12sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,11 +96,10 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/txt_fromDate"
+                android:id="@+id/txtfromDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="24 july,18"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -82,11 +119,10 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/txt_toDate"
+                android:id="@+id/txttoDate"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="24 july,18"
                 android:textSize="12sp" />
         </LinearLayout>
         <LinearLayout
@@ -105,11 +141,10 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/txt_leaveStatus"
+                android:id="@+id/txtleaveStatus"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Approved"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -129,11 +164,10 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/txt_totalDays"
+                android:id="@+id/txttotalDays"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="3 days"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -153,11 +187,10 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/txt_appliedDate"
+                android:id="@+id/txtappliedDate"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="12 july,18"
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
