--- a/app/src/main/res/layout/activity_customer_visit_form.xml
+++ b/app/src/main/res/layout/activity_customer_visit_form.xml
@@ -15,9 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone">
-    <include
-        android:id="@+id/search_panalLayout"
-        layout="@layout/search_panal"/>
+        <include
+            android:id="@+id/search_panalLayout"
+            layout="@layout/search_panal"/>
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
@@ -48,44 +48,6 @@
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:paddingTop="10dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <CheckBox
-                            android:id="@+id/check_new"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="40dp"/>
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight=".2"
-                            android:text="New"
-                            android:textColor="@color/primaryTextColor"
-                            android:textSize="14sp" />
-                        <CheckBox
-                            android:id="@+id/check_followUp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight=".2"
-                            android:text="Follow Up"
-                            android:textColor="@color/primaryTextColor"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/customer_visit"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="14sp"
-                        android:textStyle="bold|italic" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -128,7 +90,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".7"
-                            android:ems="10"
+                            android:maxLength="10"
                             android:inputType="date"
                             android:focusable="false"
                             android:textColor="@color/primaryTextColor"
