--- a/app/src/main/res/layout/activity_customer_visit_form.xml
+++ b/app/src/main/res/layout/activity_customer_visit_form.xml
@@ -24,6 +24,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/customerVisitLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
@@ -263,14 +264,6 @@
                     android:paddingRight="20dp"
                     android:paddingTop="10dp">
 
-                    <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="@string/customer_visit"-->
-                        <!--android:textColor="@color/colorPrimaryDark"-->
-                        <!--android:textSize="14sp"-->
-                        <!--android:textStyle="bold|italic" />-->
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -390,6 +383,14 @@
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
                     </LinearLayout>
+                    <TextView
+                        android:id="@+id/txt_show_history"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Show History"
+                        android:textAlignment="textEnd"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/colorPrimary" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
