--- a/app/src/main/res/layout/activity_customer_visit_form.xml
+++ b/app/src/main/res/layout/activity_customer_visit_form.xml
@@ -391,7 +391,6 @@
                         android:textAlignment="textEnd"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/colorPrimary" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -521,6 +520,17 @@
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/historyRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:padding="1dp"
+                android:visibility="gone"
+                android:background="@color/colorPrimary">
+
+            </android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
     </ScrollView>
