--- a/app/src/main/res/layout/activity_attendance_summary.xml
+++ b/app/src/main/res/layout/activity_attendance_summary.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:stretchColumns="5"
+    android:background="@color/white"
     android:orientation="vertical">
     <include
         android:id="@+id/app_bar"
@@ -49,10 +50,9 @@
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/attCalendarviewRecyclerview"
-        android:background="@color/primaryTextColor"
+        android:background="@color/black"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
