--- a/app/src/main/res/layout/activity_customer_visit_form.xml
+++ b/app/src/main/res/layout/activity_customer_visit_form.xml
@@ -238,10 +238,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".7"
-                            android:autoSizeMaxTextSize="8dp"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/primaryTextColor"
-                            android:textSize="14sp" />
+                            android:ems="10"
+                            android:inputType="textMultiLine"
+                            android:textSize="14sp"/>
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -354,10 +353,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight=".7"
-                            android:autoSizeMaxTextSize="8dp"
-                            android:maxLines="1"
-                            android:textColor="@color/primaryTextColor"
-                            android:textSize="14sp" />
+                            android:ems="10"
+                            android:inputType="textMultiLine"
+                            android:textSize="14sp"/>
                     </LinearLayout>
 
                     <LinearLayout
