--- a/app/src/main/res/layout/nav_header_main_home.xml
+++ b/app/src/main/res/layout/nav_header_main_home.xml
@@ -25,12 +25,15 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Anuj Kr. Vaish"
+        android:textStyle="italic"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/user_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="italic"
+        android:textSize="14dp"
         android:text="employee@gmail.com" />
 
 </LinearLayout>
