--- a/app/src/main/res/layout/visit_item_details_listview.xml
+++ b/app/src/main/res/layout/visit_item_details_listview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/visitHistoryAdaptorCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="24dp">
@@ -30,7 +31,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/ref_no_id"
+                        android:id="@+id/edt_company_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight=".5"
@@ -69,7 +70,6 @@
                         android:layout_weight=".7"
                         android:editable="false"
                         android:inputType="date"
-                        android:maxLength="10"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -214,6 +214,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight=".5"
                         android:text="@string/address"
+                        android:inputType="textMultiLine"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="14sp" />
 
@@ -325,7 +326,7 @@
                         android:layout_weight=".7"
                         android:autoSizeMaxTextSize="8dp"
                         android:editable="false"
-                        android:maxLines="1"
+                        android:inputType="textMultiLine"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -356,7 +357,6 @@
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
-
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
