first app released

--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.it2.axpresslogisticapp.acitvities.DocketEnquiry">
+    android:id="@+id/docketEnquirylayout"
+    tools:context="com.axpresslogistic.it2.axpresslogisticapp.acitvities.DocketEnquiry">
 
     <include
         android:id="@+id/app_bar"
