--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.example.it2.axpresslogisticapp.acitvities.SplashActivity">
+    tools:context="com.axpresslogistic.it2.axpresslogisticapp.acitvities.SplashActivity">
 
     <ImageView
         android:id="@+id/splashicon"
